build_output_new.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 21 errors
src\raylib_stub.zig:147:9: error: use of undeclared identifier 'raylib_c_uint'
    id: raylib_c_uint,
        ^~~~~~~~~~~~~
src\raylib_stub.zig:157:9: error: use of undeclared identifier 'raylib_c_uint'
    id: raylib_c_uint,
        ^~~~~~~~~~~~~
src\raylib_stub.zig:170:35: error: use of undeclared identifier 'raylib_c_int'
pub const CameraProjection = enum(raylib_c_int) {
                                  ^~~~~~~~~~~~
src\raylib_stub.zig:177:16: error: use of undeclared identifier 'raylib_c_int'
    meshCount: raylib_c_int,
               ^~~~~~~~~~~~
src\raylib_stub.zig:188:18: error: use of undeclared identifier 'raylib_c_int'
    vertexCount: raylib_c_int,
                 ^~~~~~~~~~~~
src\raylib_stub.zig:212:9: error: use of undeclared identifier 'raylib_c_uint'
    id: raylib_c_uint,
        ^~~~~~~~~~~~~
src\raylib_stub.zig:224:13: error: use of undeclared identifier 'raylib_c_int'
    parent: raylib_c_int,
            ^~~~~~~~~~~~
src\raylib_stub.zig:239:16: error: use of undeclared identifier 'raylib_c_int'
    boneCount: raylib_c_int,
               ^~~~~~~~~~~~
src\raylib_stub.zig:247:15: error: use of undeclared identifier 'raylib_c_int'
    baseSize: raylib_c_int,
              ^~~~~~~~~~~~
src\raylib_stub.zig:256:12: error: use of undeclared identifier 'raylib_c_int'
    value: raylib_c_int,
           ^~~~~~~~~~~~
src\raylib_stub.zig:265:12: error: use of undeclared identifier 'raylib_c_int'
    width: raylib_c_int,
           ^~~~~~~~~~~~
src\raylib_stub.zig:277:17: error: use of undeclared identifier 'raylib_c_uint'
    frameCount: raylib_c_uint,
                ^~~~~~~~~~~~~
src\raylib_stub.zig:282:17: error: use of undeclared identifier 'raylib_c_uint'
    frameCount: raylib_c_uint,
                ^~~~~~~~~~~~~
src\raylib_stub.zig:291:17: error: use of undeclared identifier 'raylib_c_uint'
    sampleRate: raylib_c_uint,
                ^~~~~~~~~~~~~
src\raylib_stub.zig:300:30: error: use of undeclared identifier 'raylib_c_int'
pub const KeyboardKey = enum(raylib_c_int) {
                             ^~~~~~~~~~~~
src\raylib_stub.zig:392:30: error: use of undeclared identifier 'raylib_c_int'
pub const MouseButton = enum(raylib_c_int) {
                             ^~~~~~~~~~~~
src\raylib_stub.zig:435:15: error: use of undeclared identifier 'raylib_c_uint'
    capacity: raylib_c_uint,
              ^~~~~~~~~~~~~
src\raylib_stub.zig:480:25: error: use of undeclared identifier 'raylib_c_int'
pub fn getScreenWidth() raylib_c_int {
                        ^~~~~~~~~~~~
src\raylib_stub.zig:484:26: error: use of undeclared identifier 'raylib_c_int'
pub fn getScreenHeight() raylib_c_int {
                         ^~~~~~~~~~~~
src\raylib_stub.zig:501:51: error: use of undeclared identifier 'raylib_c_int'
pub fn measureText(text: [*:0]const u8, fontSize: raylib_c_int) raylib_c_int {
                                                  ^~~~~~~~~~~~
src\raylib_stub.zig:755:56: error: use of undeclared identifier 'raylib_c_int'
pub fn loadFileData(fileName: [:0]const u8, dataSize: *raylib_c_int) ?[*]u8 {
                                                       ^~~~~~~~~~~~
error: 21 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

install
+- install nyon_game
   +- compile exe nyon_game Debug native 21 errors
src\raylib_stub.zig:147:9: error: use of undeclared identifier 'raylib_c_uint'
    id: raylib_c_uint,
        ^~~~~~~~~~~~~
src\raylib_stub.zig:157:9: error: use of undeclared identifier 'raylib_c_uint'
    id: raylib_c_uint,
        ^~~~~~~~~~~~~
src\raylib_stub.zig:170:35: error: use of undeclared identifier 'raylib_c_int'
pub const CameraProjection = enum(raylib_c_int) {
                                  ^~~~~~~~~~~~
src\raylib_stub.zig:177:16: error: use of undeclared identifier 'raylib_c_int'
    meshCount: raylib_c_int,
               ^~~~~~~~~~~~
src\raylib_stub.zig:188:18: error: use of undeclared identifier 'raylib_c_int'
    vertexCount: raylib_c_int,
                 ^~~~~~~~~~~~
src\raylib_stub.zig:212:9: error: use of undeclared identifier 'raylib_c_uint'
    id: raylib_c_uint,
        ^~~~~~~~~~~~~
src\raylib_stub.zig:224:13: error: use of undeclared identifier 'raylib_c_int'
    parent: raylib_c_int,
            ^~~~~~~~~~~~
src\raylib_stub.zig:239:16: error: use of undeclared identifier 'raylib_c_int'
    boneCount: raylib_c_int,
               ^~~~~~~~~~~~
src\raylib_stub.zig:247:15: error: use of undeclared identifier 'raylib_c_int'
    baseSize: raylib_c_int,
              ^~~~~~~~~~~~
src\raylib_stub.zig:256:12: error: use of undeclared identifier 'raylib_c_int'
    value: raylib_c_int,
           ^~~~~~~~~~~~
src\raylib_stub.zig:265:12: error: use of undeclared identifier 'raylib_c_int'
    width: raylib_c_int,
           ^~~~~~~~~~~~
src\raylib_stub.zig:277:17: error: use of undeclared identifier 'raylib_c_uint'
    frameCount: raylib_c_uint,
                ^~~~~~~~~~~~~
src\raylib_stub.zig:282:17: error: use of undeclared identifier 'raylib_c_uint'
    frameCount: raylib_c_uint,
                ^~~~~~~~~~~~~
src\raylib_stub.zig:291:17: error: use of undeclared identifier 'raylib_c_uint'
    sampleRate: raylib_c_uint,
                ^~~~~~~~~~~~~
src\raylib_stub.zig:300:30: error: use of undeclared identifier 'raylib_c_int'
pub const KeyboardKey = enum(raylib_c_int) {
                             ^~~~~~~~~~~~
src\raylib_stub.zig:392:30: error: use of undeclared identifier 'raylib_c_int'
pub const MouseButton = enum(raylib_c_int) {
                             ^~~~~~~~~~~~
src\raylib_stub.zig:435:15: error: use of undeclared identifier 'raylib_c_uint'
    capacity: raylib_c_uint,
              ^~~~~~~~~~~~~
src\raylib_stub.zig:480:25: error: use of undeclared identifier 'raylib_c_int'
pub fn getScreenWidth() raylib_c_int {
                        ^~~~~~~~~~~~
src\raylib_stub.zig:484:26: error: use of undeclared identifier 'raylib_c_int'
pub fn getScreenHeight() raylib_c_int {
                         ^~~~~~~~~~~~
src\raylib_stub.zig:501:51: error: use of undeclared identifier 'raylib_c_int'
pub fn measureText(text: [*:0]const u8, fontSize: raylib_c_int) raylib_c_int {
                                                  ^~~~~~~~~~~~
src\raylib_stub.zig:755:56: error: use of undeclared identifier 'raylib_c_int'
pub fn loadFileData(fileName: [:0]const u8, dataSize: *raylib_c_int) ?[*]u8 {
                                                       ^~~~~~~~~~~~
error: 21 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 21 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 21 errors

error: the following build command failed with exit code 1:
.zig-cache\o\48f283d057ff3818d09c60beef4fd871\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xf90ac1d5 -Z5e11637463a59af9
